<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleurFond"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextViewNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textColor="@color/couleurTitre" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/EditTextNom"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/nomHint"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textColor="@color/couleurTitre" />
    
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/EditTextPrenom"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/prenomHint"
            />
    </LinearLayout>
    
     <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/couleurTitre" />
     
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/EditTextAge"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/ageHint"
            />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textColor="@color/couleurTitre" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/EditTextSkills"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/skillsHint"
            />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/couleurTitre" />
    
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/EditTextPhone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/phoneHint"
            />
   	 </LinearLayout>
    
     <Button android:id="@+id/ButtonEnvoyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonValid"
            />
     
</LinearLayout>
